Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-    overflow: hidden;
+    /*overflow: hidden;*/
     padding: 0;
     margin: 0;
     height: 100vh;
